staging/src/slime.io/slime/modules/plugin/controllers/testdata/gateway_rc_patch.ep.yaml
apiVersion: microservice.slime.io/v1alpha1
kind: EnvoyPlugin
metadata:
  name: gateway-rc-patch
  namespace: default
  labels:
    istio.io/rev: default
spec:
  listener:
    - port: 80
      portName: http
  plugins:
    - enable: true
      inline:
        settings:
          abort:
            http_status: 429
            percentage:
              denominator: HUNDRED
              numerator: 30
      listenerType: Gateway
      name: envoy.filters.http.fault
