staging/src/slime.io/slime/modules/plugin/controllers/testdata/gateway_sample.plm.expect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  labels:
    istio.io/rev: default
  name: gateway-sample
  namespace: default
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
          portNumber: 80
      patch:
        operation: INSERT_BEFORE
        value:
          disabled: true
          name: envoy.filters.http.fault
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: ""
            value: {}
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
          portNumber: 80
      patch:
        operation: INSERT_BEFORE
        value:
          disabled: true
          name: envoy.filters.http.rbac
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: ""
            value: {}
  workloadSelector: {}
